improvements, squash bugs

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@
   text-align: center;
 }
 
-ul {
-  list-style-type: none;
+.command-group {
+  background-color: rgb(236, 226, 226);
 }
